# hyprland-autodesktop

./: Cargo.toml  README.md
src/: configuration.rs  ddc.rs  main.rs  wlr_output_state.rs
