[package]
name = "sway-autodesktop"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
clap = { version = "4.3.19", features = ["cargo", "derive"] }
libmonitor = { version = "0.1.2", features = ["serde"] }
derive-getters = "0.3.0"
derive_builder = "0.12.0"
id_tree = "1.8.0"
once_cell = "1.18.0"
serde = { version = "1.0.181", features = ["derive"] }
serde_yaml = "0.9.25"
wayland-client = "0.31.5"
wayland-protocols = { version = "0.32.3", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.3", features = ["client"] }
itertools = "0.13.0"
swayipc = "3.0.2"
swayipc-command-builder = "0.1.0"
